@@ -31,6 +31,7 @@ BETA PUBLIC RELEASE VERSION 1.3.1       6-26-08
       c. User specifies external NumPy installation.  
   * Merged Samir's branch. Now PDB2PQR Opal and APBS Opal services are 
     available.
+  * Added error handling for residue name longer than 4 characters.
 	
  -BUG FIXES
   * Fixed a legacy bug with the web server (web server doesn't like ligand 
